# InterBox-api-scrapper-test-task

./: .env  README.md  pyproject.toml
src/: main.py
src/app/: scrapper.py  utils.py
src/config/: config.py
tests/: test_scrapper.py
