[tool.poetry]
name = "interbox-api-scrapper-test-task"
version = "0.1.0"
description = ""
authors = ["AlexanderLukash <sashass20062727@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
prettytable = "^3.10.2"
environs = "^11.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
